# pokemon-mixed-integer-programing-optimization

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  README.md  main.py
cpp/: CMakeLists.txt  Main.cpp
cpp/src/: CMakeLists.txt  InputOutput.h  SrcMain.cpp  SrcMain.h
data/: Pokemon.csv
data/lists/: Mythical.csv  UltraBeast.csv
python/: requirements.txt
src/: CMakeLists.txt  Pokemon.h  SrcMain.cpp  SrcMain.h
website/: index.html  package-lock.json  package.json
website/public/data/: Pokemon.csv
website/public/data/lists/: Legendaries.csv  Paradox.csv  SubLegendary.csv
website/public/data/pokeapi_sprites/sprites/scripts/: sprite_audit_report.csv
website/src/: App.tsx  Form.tsx  Header.tsx  MIPSolver.ts  PokemonDisplay.tsx  PokemonDisplayCard.tsx
